crates/cribo/tests/snapshots/test_bundling_snapshots__bundled_code@stickytape_script_using_stdlib_module_in_package.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import xml.etree.ElementTree

# ─ Module: greeting ─
import types
greeting = types.ModuleType('greeting')
exec('message = "Hello"', greeting.__dict__)

# ─ Entry Module: main ─
print(xml.etree.ElementTree.__name__)
print(greeting.message)
