crates/cribo/tests/snapshots/test_bundling_snapshots__bundled_code@stickytape_script_with_special_shebang.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# Preserved imports
import sys

# ─ Entry Module: main ─
import sys
print(sys.flags.ignore_environment)
