crates/cribo/tests/snapshots/test_bundling_snapshots__bundled_code@stickytape_single_file.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Entry Module: main ─
print("Hello")
