crates/cribo/tests/snapshots/test_bundling_snapshots__bundled_code@stickytape_single_file_using_stdlib.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# Preserved imports
import hashlib

# ─ Entry Module: main ─
import hashlib
print(hashlib.sha1(b"Hello").hexdigest())
